test/errors/type/collections/set/__gt2.yasl
echo collections.set().__gt(1, collections.set())
